fix the 564hw00 problem2

--- a/docs/assignment564/lab01.Rmd
+++ b/docs/assignment564/lab01.Rmd
@@ -59,11 +59,11 @@ then the sum of n squared standard normal random variables follows a $\chi^2$ di
  Consider the new random variable $\frac{\overline{X}\sqrt n}{\sigma\sqrt{W/\nu_{1}}}$  
  (b). Specify the distribution of this new randome variable along with the value(s) of parameter(s).  
 
- > According to the **Central Limit Theorem**, If $X_i\quad i=1,2,...n$ are independent identically distributed random  variables with $E(Y_i)=\mu$ and $Var(Y_i)=\sigma^2<\infty$ and n is sufficiently large, then $\frac{\overline{X}\sqrt n}{\sigma}$ a normal distribution.
+ > According to the **Central Limit Theorem**, If $X_i\quad i=1,2,...n$ are independent identically distributed random  variables with $E(X_i)=\mu$ and $Var(X_i)=\sigma^2<\infty$ and n is sufficiently large, then $\frac{(\overline{X}-\mu)\sqrt n}{\sigma}$ is a standard normal distribution.
 
  > According to the defination of **t distribution**, when $Z\sim N(0, 1),\ W\sim\chi_{\nu_1}^2$, and Z and W are independent, then
 
-$$\frac{\overline{X}\sqrt n}{\sigma\sqrt{W/\nu_1}}=\frac{Z}{\sqrt{W/\nu_1}}\sim t_{\nu_1}$$  
+$$\frac{(\overline{X}-0)\sqrt n}{\sigma\sqrt{W/\nu_1}}=\frac{Z}{\sqrt{W/\nu_1}}\sim t_{\nu_1}$$  
 
  > where $t_{\nu_1}$ is the t distribution with $\nu_1$ degrees of freedom.  
 
