--- a/static/assignment564/lab02.Rmd
+++ b/static/assignment564/lab02.Rmd
@@ -4,8 +4,8 @@ author: "Shen Qu"
 date: "10/15/2018"
 output: 
   html_document:
-    toc: true
-    toc_float: true
+    toc: false
+    toc_float: false
 ---
 
 ```{r setup, include=F}
