--- a/docs/assignment561/hw01.Rmd
+++ b/docs/assignment561/hw01.Rmd
@@ -46,14 +46,23 @@ C(6,4)
 
 1.20 My telephone rings 12 times each week, the calls being randomly distributed among the 7 days. What is the probability that I get at least one call each day?  
 (Answer: .2285)
-
+(https://jcnts.wordpress.com/2011/05/15/at-least-one-call-each-day/)
 We assume each call is unique.
 
 ```{r}
-C <- function(n,k){choose(n,k)} # combination
-P <- function(n,k){choose(n,k) * factorial(k)} # permutation
-C(12,7)*P(5,5)/P(12,7)
+# X1…n ∼Binomial(size,p)
+# Generate 1000000 occurrences of 12 calls, each with 7/12 probability
+# Finding density with simulation
+mean(rbinom(1000000,12,7/12)==7)
+# Calculating exact probability density
+dbinom(7, 12, 7/12)
 ```
+
+If each call is randomly assigned to a day, then this is equivalent to asking for the probability of finding each of 7 coupons on 12 draws in the Coupon collector's problem. It's also equivalent to asking the probability that a random 12-letter word written with a 7-letter alphabet contains all 7 letters.
+There are a total of 7^12 words, and the number containing all 7 letters is, by inclusion/exclusion:
+
+$$7^{12}-\binom766^{12}+\binom755^{12}-\binom744^{12}+\binom733^{12}-\binom722^{12}+\binom711^{12}$$
+$$\frac{3162075840}{7^{12}}\approx 22.846\%$$
 
 1.27 Verify the following identities for $n\ge2$.  
 
