--- a/static/assignment564/lab02.Rmd
+++ b/static/assignment564/lab02.Rmd
@@ -92,7 +92,7 @@ x11 : Type of transmission (A automatic; M manual)
 table_b3 <- read_xlsx("Table B.3.xlsx")
 
 # Observe the data frame
-glimpse(table_b3)
+head(table_b3)
 
 # visualizng y and x1
 table_b3 %>% ggplot(aes(x1,y))+geom_point()+geom_smooth(method="lm")
@@ -138,6 +138,8 @@ d. Construct a 99% prediction interval on steam usage in a month with average am
 ## Problem 4: 
 
 Exercise 2.25 (Page 65): Consider the simple linear regression model $y=\beta_0+\beta_1x + \epsilon$, with $E(\epsilon)=0,\ Var(\epsilon)=\sigma^2$, and $\epsilon$ uncorrelated.
+
+$$Cov(a_1X_1+a_2X_2,\ b_1Y_1+b_2Y_2)=a_1b_1Cov(X_1,Y_1)+a_1b_2Cov(X_1,Y_2)+a_2b_1Cov(X_2,Y_1)+a_2b_2Cov(X_2,Y_2)$$
 
 a. Show that $Cov(\hat\beta_0, \hatβ_1)=−\overline x\sigma^2 S_{xx}$.
 
