--- a/docs/assignment561/hw01.Rmd
+++ b/docs/assignment561/hw01.Rmd
@@ -3,10 +3,7 @@ title: 'STAT561 Fall 2017 HW1'
 author: "Shen Qu"
 date: "9/29/2017"
 output: 
-  html_document:
-   toc: true
-   toc_float: true
-
+  html_document
 ---
 
 
