--- a/docs/assignment561/hw01.Rmd
+++ b/docs/assignment561/hw01.Rmd
@@ -7,7 +7,7 @@ output:
 ---
 
 
-1.13 If $P(A)=1/3$ and $P(B^c)=1/4$, can A and B be disjoint? Explain.  
+**1.13** If $P(A)=1/3$ and $P(B^c)=1/4$, can A and B be disjoint? Explain.  
 
 > According to properties of the probability function
 
@@ -21,8 +21,8 @@ $$\implies\quad P(A\cap B)\ge P(A)+P(B)-(2-1)=\frac13+\frac34-1=\frac1{12}$$
 
 > According to properties of the probability function, $A\cap B\ne\emptyset$. Therefore, A and B don't satisfy the definition of pairwise disjoint.
 
----
-1.19 If a multivariate function has continuous partial derivatives, the order in which the derivatives are calculated does not matter. Thus, for example, the function f(x, y) of two variables has equal third partials  
+
+**1.19** If a multivariate function has continuous partial derivatives, the order in which the derivatives are calculated does not matter. Thus, for example, the function f(x, y) of two variables has equal third partials  
 
 $$\frac{\partial^3}{\partial x^2\partial y}f(x,y)=\frac{\partial^3}{\partial y\partial x^2}f(x,y)$$
 
@@ -36,7 +36,7 @@ $$\frac{\partial^4}{\partial V_1^{r_1}\partial V_2^{r_2}\partial V_3^{4-r_1-r_2}
 The number of possible derivatives is equal to the number of possible arrangements of putting the 4 index into the 3 bins, which is the arrangement of the index and the walls of the bins. 3 bins make 3-1=2 walls. Thus, we count all of the arrangements of 2 walls and 4 index about **unordered** counting **with replacement**. 
 We calculate the combination $\binom64$. The result is 15.
 
-```{r, echo=FALSE}
+```{r, include=FALSE}
 C <- function(n,r){choose(n,r)} # combination
 P <- function(n,r){choose(n,r) * factorial(r)} # permutation
 C(6,4)
@@ -59,19 +59,19 @@ $$\bigg (\binom nr\bigg)=\binom {n+r-1}r=\frac{(n+r-1)!}{r!(n-1)!}=\frac{(n+r-1)
  
 $$\binom{n+r-1}{r-1}=\binom{n+r-1}{n}$$
 
- --- 
-1.20 My telephone rings 12 times each week, the calls being randomly distributed among the 7 days. What is the probability that I get at least one call each day?  
 
-<!--[Answer: .2285](https://jcnts.wordpress.com/2011/05/15/at-least-one-call-each-day/)-->
+**1.20** My telephone rings 12 times each week, the calls being randomly distributed among the 7 days. What is the probability that I get at least one call each day?  
 
- > This question is about enumerating methods of counting to construct probability assignments on finite sample spaces. Each call is unique and randomly assigned to a day independently. There are a total of $7^12$ assignments.
-   Firstly, We use $P_i, i=1,2,...7$ to represent the porbability of no call on i days. When no call on 1 day, the number of assignments of rest days includes 6 ordered choosing tasks in 12 ways with replacement. In this way, when no call on 6 day the number of assignments of rest days includes 1 ordered choosing tasks in 12 ways with replacement. The probabilities are:
+<!--[Answer: .2285](https://jcnts.wordpress.com/2011/05/15/at-least-one-call-each-day/)(https://math.stackexchange.com/questions/2421875/what-is-the-probability-i-get-at-least-one-call-each-day-if-my-telephone-rings?rq=1)-->
+
+ > This question is about enumerating methods of counting to construct probability assignments on finite sample spaces. Each call is unique and randomly assigned to a day independently. There are a total of $7^{12}$ assignments.  
+   Firstly, We use $P_i,\ i=1,2,...7$ to represent the porbability of no call on i days. When no call on 1 day, the number of assignments of rest days includes 6 ordered choosing tasks in 12 ways with replacement. In this way, when no call on 6 day the number of assignments of rest days includes 1 ordered choosing tasks in 12 ways with replacement. The probabilities are:
  
 $$P_i=\frac{6^{12}}{7^{12}},\ \frac{5^{12}}{7^{12}},..\frac{1^{12}}{7^{12}},\ 0$$
 
 
 
- > Secondly, we use $A_i, i=1,2,...7$ represent the combination of days. The probability of no call is:
+ > Secondly, we use $A_i,\ i=1,2,...7$ represent the combination of days. The probability of no call is:
 
 $$P(A_1\cup A_2\cup...A_7)=P(\cup_{i=1}^7A_i)=\sum_{i=1}^7P(A_i)-\sum_{i<j}P(A_i\cap A_j)+\sum_{i<j<k}P(A_i\cap A_j\cap A_k)-...+P(\cap_{i=1}^7A_i)$$
 
@@ -105,11 +105,11 @@ dbinom(7, 12, 7/12)
 ```
 
 
-1.27 Verify the following identities for $n\ge2$.  
+**1.27** Verify the following identities for $n\ge2$.  
 
 (a) $\sum_{k=0}^n(-1)^k(_k^n)=0$  
 
-When n is odd, the formula is:
+ > When n is odd, the formula is:
 
 $$\sum_{k=0}^n(-1)^k(_k^n)=\binom n0-\binom n1+\binom n2...-\binom n{n-2}+\binom n{n-1}-\binom nn$$
 
@@ -117,15 +117,16 @@ $$=\binom n0-\binom nn+\Big[\binom n{n-1}-\binom n1\Big]+\Big[\binom n2-\binom n
 
 $$\because\quad \binom nk=\frac{n!}{k!(n-k)!}=\frac{n!}{(n-k)![n-(n-k)]!}=\binom n{n-k}$$
 
- > All $\binom nk and \binom n{n-k}$ which are equal and have opposite signs. Thus, all pairs cancel and the sum is zero.
-In the same way, we know for n even that: 
+ > All $\binom nk and \binom n{n-k}$ which are equal and have opposite signs. Thus, all pairs cancel and the sum is zero.  
+ 
+ > When n is even, in the same way, we know that: 
 
 $$\sum_{k=1}^{n-1}(-1)^k\binom{n-1}k=\Bigg[-\binom{n-1}1+\binom{n-1}2-\binom{n-1}3...-\binom{n-1}{n-3}+\binom {n-1}{n-2}\Bigg]-\binom{n-1}{n-1}=-\binom{n-1}{n-1}=-1$$
 
 $$\sum_{k=1}^{n-1}(-1)^k\binom{n-1}{k-1}=-\binom{n-1}0+\Bigg[\binom{n-1}1-\binom{n-1}2...-\binom{n-1}{n-4}+\binom {n-1}{n-3}-\binom{n-1}{n-2}\Bigg]=-\binom{n-1}{0}=-1$$
 
 
- > When n is odd, the formula is:
+ > When n is even, the formula is:
 
 $$\sum_{k=0}^n(-1)^k(_k^n)=\binom n0-\binom n1+\binom n2...+\binom n{n-2}-\binom n{n-1}+\binom nn$$
 
@@ -139,7 +140,7 @@ $$\therefore\quad \sum_{k=0}^n(-1)^k(_k^n)=2+\sum_{k=1}^{n-1}(-1)^k\bigg[\binom 
 
 $$=2+\sum_{k=1}^{n-1}(-1)^k\binom {n-1}{k-1}+\sum_{k=1}^{n-1}(-1)^k\binom {n-1}{k}=2-1-1=0$$
 
-Therefore, for k>0, $\sum_{k=0}^n(-1)^k(_k^n)=0$
+ > Therefore, for k>0, $\sum_{k=0}^n(-1)^k(_k^n)=0$
 
 (b) $\sum_{k=1}^nk\binom{k}n=n2^{n-1}$  
 
@@ -155,19 +156,47 @@ $$\therefore\quad \sum_{k=1}^nk\binom{k}n=n2^{n-1}$$
 
 (c) $\sum_{k=1}^n(-1)^{k+1}k(_k^n)=0$  
 
-According question (a) $\sum_{j=0}^m(-1)^j\binom{m}j=0$, set j=k-1, m=n-1.
+ > According question (a) $\sum_{j=0}^m(-1)^j\binom{m}j=0$, set j=k-1, m=n-1.
 
 $$\implies \sum_{k=1}^{n-1}(-1)^{k-1}\binom{n-1}{k-1}=0$$
 
 
-1.38 Prove each of the following statements. ( Assume that any conditioning event has positive probability.)  
+**1.38** Prove each of the following statements. ( Assume that any conditioning event has positive probability.)  
 
 (a) If P(B) = 1 , then P(A|B) = P(A) for any A.  
 
+ $$\because\quad P(B)=1,\quad \text{according Theorem 1.2.8}\quad P(B^c)=1-P(B)=0\quad \therefore A\cap B^c=\emptyset$$
+ 
+  $$\text{according Theorem 1.2.11}\quad P(A)=P(A\cap B)+P(A\cap B^c)=P(A\cap B)+P(\emptyset)=P(A\cap B)$$
+ 
+ > According to the definition of **conditional probability of A given B**
+
+$$\therefore\quad P(A|B)=\frac{P(A\cap B)}{P(B)}=\frac{P(A)}1=P(A)$$
+
 (b) If A $\subset$ B, then P(B|A) = 1 and P(A|B) = P(A)/P(B).  
+
+$$When A\subset B,\quad A\cap B=A,\quad P(A\cap B)=P(A)$$
+
+$$\therefore\quad P(B|A)=\frac{P(A\cap B)}{P(A)}=\frac{P(A)}{P(A)}=1$$
 
 (c) If A and B are mutually exclusive, then  
 
-$$P(A|A\cup B) = \frac{P(A)}{P(A) + P(B)}$$
+ > According to the Axiom of Finite Additivity: If A and B are disjoint, then 
 
-(d) $P(A)\cap B\cap C) = P(A|B\cap C)P(B|C)P(C)$ .  
+$$P(A\cup B) = P(A) + P(B)$$
+
+$$And\quad A\subset A\cup B,\quad A\cap(A\cup B)=A$$
+
+$$\therefore\quad P(A|A\cup B)=\frac{P(A\cap(A\cup B))}{P(A\cup B)} =\frac{P(A)}{P(A) + P(B)}$$
+
+(d) $P(A\cap B\cap C) = P(A|B\cap C)P(B|C)P(C)$ .  
+
+ > According to the definition of **conditional probability of A given B**
+
+$$P(A|B)=\frac{P(A\cap B)}{P(B)},\quad then\quad P(A\cap B)=P(A|B)P(B)$$
+
+$$\therefore P(A\cap (B\cap C)) = P(A|(B\cap C))P(B\cap C)=P(A|B\cap C)\Big[P(B|C)P(C)\Big]$$
+
+$$= P(A|B\cap C)P(B|C)P(C)$$
+
+
