--- a/static/assignment561/hw02.Rmd
+++ b/static/assignment561/hw02.Rmd
@@ -1,7 +1,8 @@
 ---
-title: 'USP654 Fall 2017 HW2'
-subtitle: Multiple Regression, Dummy Variable, Interaction, and Diagnostics
-date: "10/23/2017"
+title: "HW2"
+subtitle: STAT561 Fall 2018
+author: 'Shen Qu'
+date: "10/13/2018"
 output: html_document
 ---
 
