--- a/docs/assignment561/hw02.Rmd
+++ b/docs/assignment561/hw02.Rmd
@@ -6,6 +6,32 @@ date: "10/11/2018"
 output: html_document
 ---
 
+1 .37 Some variations of Example 1.3.4.
+(a) In the warden's calculation it was assumed that if A were to be pardoned, then with equal probability the warden would tell A that either B or C would die. However, this need not be the case. The warden can assign probabilities Y and 1-Y to these events, as shown here:
+
+
+Prisoner pardoned | Warden tells A |
+---|---|---
+A | B dies | with probability Y
+A | C dies | with probability 1-Y
+B | C dies | 
+C | B dies | 
+
+
+Calculate P(A|W) as a function of Y. For what values of Y is P(A|W) less than,equal to, or greater than 1/3?  
+
+ > A, B, c is a partitions of sample space. According the Beyes' rule
+ 
+$$P(A|W)=\frac{P(W|A)P(A)}{P(W|A)P(A)+P(W|B)P(B)+P(W|C)P(C)}=\frac{\gamma\frac13}{\gamma\frac13+0\frac13+\frac13}=\frac{\gamma}{\gamma+1}$$
+
+$$P(A|W)=\frac{\gamma}{\gamma+1}=\begin{cases}<\frac13&\gamma<\frac12\\=\frac13&\gamma=\frac12\\>\frac13&\gamma>\frac12\end{cases}$$
+
+(b) Suppose again that Y = 1/2. After the warden tells A that B will die, A thinks for a while and realizes that his original calculation was false. However, A then gets a bright idea. A asks the warden if he can swap fates with C. The warden, thinking that no information has been passed, agrees to this. Prove that A's reasoning is now correct and that his probability of survival has jumped to 2/3!
+
+$$P(C|W)=\frac{P(W|C)P(C)}{P(W|A)P(A)+P(W|B)P(B)+P(W|C)P(C)}=\frac{\frac13}{\frac12\frac13+0\frac13+\frac13}=\frac23$$
+
+ > Therefore, if A swap fates with C, his probability of survival is 2/3.
+
 1 .39 A pair of events A and B cannot be simultaneously mutually exclusive and independent. Prove that if P(A) > 0 and P(B) > 0, then:
 
 (a) If A and B are mutually exclusive, they cannot be independent.
@@ -63,7 +89,8 @@ $$\text{in the same way, }\lim_{x\to\infty}F(x)=\lim_{x\to\infty}(1-e^{-x})=1-e^
 
 $$f(x)'=\frac\partial{\partial{x}}(1-e^{-x})=-e^{-x}\frac\partial{\partial{x}}(-x)=e^{-x}>0$$
 
-(e) the function defined in (1.5.6)   $F_Y(y)=\begin{cases}\frac{1-\epsilon}{1+e^{-y}}，& y<0\\\epsilon+\frac{1-\epsilon}{1+e^{-y}}，& y\ge0\end{cases} $
+(e) the function defined in (1.5.6)   
+$F_Y(y)=\begin{cases}\frac{1-\epsilon}{1+e^{-y}}，& y<0\\\epsilon+\frac{1-\epsilon}{1+e^{-y}}，& y\ge0\end{cases} $
 
  > This is a cdf with jumps.
  
