--- a/docs/assignment561/hw02.Rmd
+++ b/docs/assignment561/hw02.Rmd
@@ -9,6 +9,7 @@ output: html_document
 1 .37 Some variations of Example 1.3.4.
 (a) In the warden's calculation it was assumed that if A were to be pardoned, then with equal probability the warden would tell A that either B or C would die. However, this need not be the case. The warden can assign probabilities Y and 1-Y to these events, as shown here:
 
+{.table .table-condensed .table-striped}
 
 Prisoner pardoned | Warden tells A |
 ---|---|---
@@ -49,9 +50,9 @@ $$\because\quad P(A)P(B)>0\quad \therefore\quad P(A)P(B)\ne P(A\cap{B})$$
 1.47 Prove that the following functions are cdfs.
 
  > According the Theorem 1.5.3 about **cumulative distribution function**, A cdf F(x) should satisfy 3 conditions:   
-a. $\lim_{x\to-\infty}F(x)=0\ \& \lim_{x\to\infty}F(x)=1$
-b. F is non-decreasing，which means for any a>b $ f(a)>f(b) $
-c. F is right-continuous, which means $\lim_(x\to c)f(x)=f(c) $
+a. $\lim_{x\to-\infty}F(x)=0\ \& \lim_{x\to\infty}F(x)=1$;  
+b. F is non-decreasing; and   
+c. F is right-continuous, which means $\lim_{x\to\infty}f(x)>0$
 
 (a) $\frac12+\frac1\pi\tan^{-1}(x), x\in-(\infty,\infty)$
 
