--- a/docs/assignment561/hw02.Rmd
+++ b/docs/assignment561/hw02.Rmd
@@ -11,7 +11,7 @@ output: html_document
 (a) In the warden's calculation it was assumed that if A were to be pardoned, then with equal probability the warden would tell A that either B or C would die. However, this need not be the case. The warden can assign probabilities Y and 1-Y to these events, as shown here:
 
 
-{.table .table-condensed .table-striped}
+{.table-condensed .table-striped}
 Prisoner pardoned | Warden tells A |
 ---|---|---
 A | B dies | with probability Y
