--- a/docs/assignment564/lab02.Rmd
+++ b/docs/assignment564/lab02.Rmd
@@ -41,6 +41,8 @@ head(table_b2)
 table_b2 %>% ggplot(aes(x4,y))+geom_point()+geom_smooth(method="lm", level=0.99)
 ```
 
+ > The plot shows a decreasing approximately linear pattern.
+
 a. Fit a simple linear regression model relating total heat flux y (kilowatts) to the radial deflection of the deflected rays $x_4$ (milliradians).
 
 ```{r}
@@ -119,6 +121,8 @@ head(table_b3)
 table_b3 %>% ggplot(aes(x1,y))+geom_point()+geom_smooth(method="lm")
 ```
 
+ > The plot shows a decreasing approximately linear pattern.
+
 a. Fit a simple linear regression model relating gasoline mileage y (miles per gallon) to engine displacement x1 (cubic inches).
 
 
@@ -193,6 +197,8 @@ glimpse(table_12)
 # visualizng `Usage/l000` and Temperature
 table_12 %>% ggplot(aes(Temperature,`Usage/l000`,col=as.factor(Month)))+geom_point( )+geom_smooth(method="lm")
 ```
+
+ > The plot shows a increasing approximately linear pattern.
 
 a. Fit a simple linear regression model to the data.
 
