fix the 561hw1 question2(c)

--- a/docs/assignment564/lab02.Rmd
+++ b/docs/assignment564/lab02.Rmd
@@ -147,6 +147,10 @@ anova(model_y_x1)
 
 c. What percent of the total variability in gasoline mileage is accounted for by the linear relationship with engine displacement?
 
+```{r}
+model_y_x1 %>% summary()
+```
+
  > According to the Multiple R-squared value, there are 77.2% variability in gasoline mileage is accounted for by the linear relationship with engine displacement.
 
 d. Find a 95% CI on the mean gasoline mileage if the engine displacement is 275 in.^3
